--- a/Presentation_Layer/assign.html
+++ b/Presentation_Layer/assign.html
@@ -10,8 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <script src="/js/redirect.js"></script>
-    <script src="/js/serverClientLink.js"></script>
+    <script src="/js/static.js"></script>
     <title>Job || Assign</title>
   </head>
   <body>
