--- a/Presentation_Layer/login.html
+++ b/Presentation_Layer/login.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <script src="/js/redirectLogin.js" defer></script>
+    <script src="/js/static.js"></script>
   </head>
   <body>
     <div class="left-container">
