--- a/Presentation_Layer/reporting.html
+++ b/Presentation_Layer/reporting.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800&display=swap"
       rel="stylesheet"
     />
-    <script src="/js/redirect.js"></script>
+    <script src="/js/static.js"></script>
     <title>Reporting Stats</title>
   </head>
   <body>
@@ -42,7 +42,7 @@
         <div class="statistics-header">
           <p>View all the Statistics</p>
         </div>
-        
+
         <div class="filters">
           <div class="select-view">
             <select>
@@ -74,7 +74,5 @@
         </div>
       </div>
     </div>
-
-    <script src="/js/reporting.js"></script>
   </body>
 </html>
