--- a/Presentation_Layer/client&contract.html
+++ b/Presentation_Layer/client&contract.html
@@ -11,7 +11,6 @@
       rel="stylesheet"
     />
     <script src="/js/static.js"></script>
-    <script src="https://kit.fontawesome.com/9f93f24df3.js" crossorigin="anonymous"></script>
     <title>Contract || Client</title>
   </head>
 
@@ -175,6 +174,6 @@
       </div>
     </div>
 
-    <div id="toastbox"></div>
+    <script src="/js/clientcontract.js"></script>
   </body>
 </html>
