--- a/Presentation_Layer/login.html
+++ b/Presentation_Layer/login.html
@@ -30,11 +30,11 @@
           </div>
           <div class="enter-name-container">
             <p>Username:</p>
-            <input class="enter-name-editbox" type="text" id="username" placeholder="Enter your username" value="employee01"/>
+            <input class="enter-name-editbox" type="text" id="username" placeholder="Enter your username" />
           </div>
           <div class="enter-password-container">
             <p>Password:</p>
-            <input class="enter-password-editbox" type="password" id="password" placeholder="Enter your password" value="Pass123" />
+            <input class="enter-password-editbox" type="password" id="password" placeholder="Enter your password" />
           </div>
           <div class="login-button" id="login-button">LOGIN</div>
           <div class="error-message" id="error-message" style="color: red; display: none"></div>
