--- a/Presentation_Layer/client&contract.html
+++ b/Presentation_Layer/client&contract.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <script src="/js/static.js"></script>
+    <script src="https://kit.fontawesome.com/9f93f24df3.js" crossorigin="anonymous"></script>
     <title>Contract || Client</title>
   </head>
 
@@ -85,68 +86,81 @@
           </div>
 
           <form action="" id="contractForm">
-            <div class="contract-input">
-              <label for="Contract-Client-Name">Client Name:</label>
-              <input type="text" id="Contract-Client-Name" name="Contract-Client-Name" placeholder="Name" required />
+            <div class="row-container">
+              <div class="contract-input">
+                <label for="Contract-Client-Name">Client Name:</label>
+                <input type="text" id="Contract-Client-Name" name="Contract-Client-Name" placeholder="Name" required />
+              </div>
+
+              <div class="contract-input">
+                <label for="Contract-Client-Surname">Client Surname:</label>
+                <input
+                  type="text"
+                  id="Contract-Client-Surname"
+                  name="Contract-Client-Surname"
+                  placeholder="Surname"
+                  required
+                />
+              </div>
+            </div>
+            <div class="row-container">
+              <div class="contract-input">
+                <label for="Contract-Client-Email">Client Email:</label>
+                <input
+                  type="email"
+                  id="Contract-Client-Email"
+                  name="Contract-Client-Email"
+                  placeholder="Email"
+                  required
+                />
+              </div>
+
+              <div class="contract-input">
+                <label for="Contract-Client-Phone">Client Phone:</label>
+                <input
+                  type="tel"
+                  id="Contract-Client-Phone"
+                  name="Contract-Client-Phone"
+                  placeholder="Phone"
+                  required
+                />
+              </div>
             </div>
 
-            <div class="contract-input">
-              <label for="Contract-Client-Surname">Client Surname:</label>
-              <input
-                type="text"
-                id="Contract-Client-Surname"
-                name="Contract-Client-Surname"
-                placeholder="Surname"
-                required
-              />
+            <div class="row-container">
+              <div class="contract-input">
+                <label for="Contract-Category">Contract Category:</label>
+                <input type="text" id="Contract-Category" name="Contract-Category" placeholder="Category" required />
+              </div>
+
+              <div class="contract-input">
+                <label for="Contract-Maintenance">Contract Maintenance:</label>
+                <input
+                  type="text"
+                  id="Contract-Maintenance"
+                  name="Contract-Maintenance"
+                  placeholder="Maintenance"
+                  required
+                />
+              </div>
             </div>
 
-            <div class="contract-input">
-              <label for="Contract-Client-Email">Client Email:</label>
-              <input
-                type="email"
-                id="Contract-Client-Email"
-                name="Contract-Client-Email"
-                placeholder="Email"
-                required
-              />
-            </div>
+            <div class="row-container">
+              <div class="contract-input">
+                <label for="Contract-Time-Period">Contract Time Period:</label>
+                <input
+                  type="text"
+                  id="Contract-Time-Period"
+                  name="Contract-Time-Period"
+                  placeholder="Time Period"
+                  required
+                />
+              </div>
 
-            <div class="contract-input">
-              <label for="Contract-Client-Phone">Client Phone:</label>
-              <input type="tel" id="Contract-Client-Phone" name="Contract-Client-Phone" placeholder="Phone" required />
-            </div>
-
-            <div class="contract-input">
-              <label for="Contract-Category">Contract Category:</label>
-              <input type="text" id="Contract-Category" name="Contract-Category" placeholder="Category" required />
-            </div>
-
-            <div class="contract-input">
-              <label for="Contract-Maintenance">Contract Maintenance:</label>
-              <input
-                type="text"
-                id="Contract-Maintenance"
-                name="Contract-Maintenance"
-                placeholder="Maintenance"
-                required
-              />
-            </div>
-
-            <div class="contract-input">
-              <label for="Contract-Time-Period">Contract Time Period:</label>
-              <input
-                type="text"
-                id="Contract-Time-Period"
-                name="Contract-Time-Period"
-                placeholder="Time Period"
-                required
-              />
-            </div>
-
-            <div class="contract-input">
-              <label for="Contract-Start-Date">Contract Start Date:</label>
-              <input type="date" id="Contract-Start-Date" name="Contract-Start-Date" required />
+              <div class="contract-input">
+                <label for="Contract-Start-Date">Contract Start Date:</label>
+                <input type="date" id="Contract-Start-Date" name="Contract-Start-Date" required />
+              </div>
             </div>
 
             <div class="contract-input">
@@ -174,6 +188,6 @@
       </div>
     </div>
 
-    <script src="/js/clientcontract.js"></script>
+    <div id="toastbox"></div>
   </body>
 </html>
