--- a/Presentation_Layer/review.html
+++ b/Presentation_Layer/review.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
     <script src="/js/static.js"></script>
+    <script src="https://kit.fontawesome.com/9f93f24df3.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -75,5 +76,6 @@
         </form>
       </div>
     </div>
+    <div id="toastbox"></div>
   </body>
 </html>
